--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="common_space_1x">8dp</dimen>
+    <dimen name="common_space_2x">16dp</dimen>
 </resources>
